--- a/dashboard.html
+++ b/dashboard.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <style>
+        .material-symbols-outlined {
+          font-variation-settings:
+          'FILL' 0,
+          'wght' 500,
+          'GRAD' 0,
+          'opsz' 24
+        }
+    </style> 
 </head>
 <body>
     <div class="header">
@@ -28,11 +38,17 @@
     </div>
     <div class="sidebar">
         <div class="dashboard-logo">
-            <!-- <img src="" alt=""></img> -->
+            <span class="material-symbols-outlined" id="dashboard-icon">dashboard</span>
             <h2>Dashboard</h2>
         </div>
         <div class="general-menu">
-<!-- <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">            </img> -->
+            <span class="material-symbols-outlined">home</span>
+            <span class="material-symbols-outlined">person</span>
+            <span class="material-symbols-outlined">message</span>
+            <span class="material-symbols-outlined">history</span>
+            <span class="material-symbols-outlined">target</span>
+            <span class="material-symbols-outlined">task_alt</span>
+            <span class="material-symbols-outlined">group</span>
             <div>Home</div>
             <div>Profile</div>
             <div>Messages</div>
@@ -42,7 +58,9 @@
             <div>Team</div>
         </div>
         <div class="configurations-menu">
-<img src="" alt=""><img src="" alt=""><img src="" alt="">            </img>
+<span class="material-symbols-outlined">settings</span>
+<span class="material-symbols-outlined">support_agent</span>
+<span class="material-symbols-outlined">privacy_tip</span>
             <div>Settings</div>
             <div>Support</div>
             <div>Privacy</div>
