Header Styling Done

--- a/dashboard.html
+++ b/dashboard.html
@@ -19,17 +19,15 @@
 </head>
 <body>
     <div class="header">
-        <div class="search-box">
-            <!-- <img src="" alt=""> -->
-            <div class="search-bar"></div>
-        </div>
-        <div class="profile">
-            <!-- <img src="" alt=""> -->
-            <!-- <img src="" alt="profile-picture"> -->
-            <div class="">Jurgen Klopp</div>
+        <div class="search-box-and-profile">
+            <span class="material-symbols-outlined">search</span>            
+            <div class="empty-search-bar"></div>
+            <span class="material-symbols-outlined">notifications</span>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNNf_HrZI3trhLkUWwuiEmvgO6EyJl3bFKmrqqRopSMvUc3N7projGGF7tvMa1CtCgkrQ&usqp=CAU" alt="profile-picture">
+            <div>Jurgen Klopp</div>
         </div>
         <div class="welcome-message">
-            <!-- <img src="" alt="profile-picture"> -->
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNNf_HrZI3trhLkUWwuiEmvgO6EyJl3bFKmrqqRopSMvUc3N7projGGF7tvMa1CtCgkrQ&usqp=CAU" alt="profile-picture">
             <p>Welcome back, Jurgen Klopp (@jurgen)</p>
         </div>
         <div class="upload-button">
@@ -58,9 +56,9 @@
             <div>Team</div>
         </div>
         <div class="configurations-menu">
-<span class="material-symbols-outlined">settings</span>
-<span class="material-symbols-outlined">support_agent</span>
-<span class="material-symbols-outlined">privacy_tip</span>
+            <span class="material-symbols-outlined">settings</span>
+            <span class="material-symbols-outlined">support_agent</span>
+            <span class="material-symbols-outlined">privacy_tip</span>
             <div>Settings</div>
             <div>Support</div>
             <div>Privacy</div>
@@ -100,7 +98,7 @@
                 </p>
             </div>
         </div>
-        <div class="announcements">
+        <div class="global-news">
             <h3>Global</h3>
             <div>
 <h5>Man City wins Club World Cup</h5>
@@ -118,7 +116,7 @@
 </p>
             </div>
         </div>
-        <div class="top-performers">
+        <div class="stats">
             <h3>Stats</h3>
             <div>
 <!-- <img src="" alt=""> -->
