Project Done : Finalised

--- a/dashboard.html
+++ b/dashboard.html
@@ -105,17 +105,17 @@
             <h3>Global</h3>
             <div class="info-cards">
                 <h5>Man City wins Club World Cup</h5>
-                <p>Cras nisl erat, imperdiet vitae felis nec, dignissim laoreet felis. Ut semper orci et tortor efficitur, a rutrum.
+                <p>Cras nisl erat, imperdiet vitae felis nec, dignissim laoreet felis.
                 </p>
             </div>
             <div class="info-cards">
                 <h5>Europa glory for the underdogs</h5>
-                <p>Sed nulla enim, semper nec elementum ac, egestas vitae enim. Quisque ullamcorper metus vel lacinia malesuada. Pellentesque vitae.
+                <p>Quisque ullamcorper metus vel lacinia malesuada. Pellentesque vitae.
                 </p>
             </div>
             <div class="info-cards">
                 <h5>Manchester United's sale saga</h5>
-                <p>Maecenas ultrices tellus sit amet metus porttitor ullamcorper. Cras posuere ac mauris a aliquet. Donec vestibulum purus at.
+                <p>Maecenas ultrices tellus sit amet metus porttitor ullamcorper.
                 </p>
             </div>
         </div>
